Remove fixed height for .card on mobile

--- a/article-preview-component/style.scss
+++ b/article-preview-component/style.scss
@@ -42,7 +42,7 @@ body {
     // border: greenyellow 1px solid;
     margin: 0 25px;
     max-width: 325px;
-    height: 514px;
+    // height: 514px;
     border-radius: 10px;
     overflow: hidden;
     position: relative;
